--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
           </div>
         </div>
         <div class="bodytext1">
-          <p>LLocavore ea meggings, deep v gentrify bespoke butcher yr typewriter. Nisis sunt 8-bit craft beer, leggings deep v diodiesel Williamsburg. Actually hashtag art party nesciunt squid pour-over. Kitsch Vice cray, Marfa brunch fingerstache officia Schlitz Blue Bottle cillum. Mlkshk 8-bit aliquip fingerstache sunt.            </p>
+          <p>LLocavore ea meggings, deep v gentrify bespoke butcher yr typewriter. Nisis sunt 8-bit craft beer, leggings deep v diodiesel Williamsburg. Actually hashtag art party nesciunt squid pour-over. Kitsch Vice cray, Marfa brunch fingerstache officia Schlitz Blue Bottle cillum. Mlkshk 8-bit aliquip fingerstache sunt.</p>
           <p>Distillery ad sriracha, synth wolf street art brunch excepteur consectetur art party irony fugiat. Duis chia yr, pour-over Portlant velit High Life non aesthetic fugiat tattooed shabby <a href="https://soundcloud.com/widenski/dj-widenski-chic-disco-mixtape-2016">chic mixtape.</a></p>
         </div>
         <div class="woah">
           <span>Woah, that's radical!</span>
         </div>
         <div class="bodytext2">
-          <p>Swag nisi mixtape cray, non hashtag blog tote bag dolor bitters before they sold out ea dolore. Raw denim mixtape drinking vinegar, Vice 3 wolf moon authentic officia aute id. Keffiyeh yr retro, salvia aliqua (rollover) leggings selvage narwhal farm-t-table dolor Tonx DIY photo booth. Bitters gastropub non 3 wolf moon Blue Bottle organic, cray aesthetic jean shorts velit umami. Mlkshk roof party cardigan, farm-to-table aute plaid wolf master cleanse. Thundercats tatooed lo-fi culpa, mollit Pinterest American Apparel. 3 wolf moon VHS hella, Tonx beard chambray sustainable jean shorts synth mlkshk fugiat excepteur banh mi eu whatever.</p>
+          <p>Swag nisi mixtape cray, non hashtag blog tote bag dolor bitters before they sold out ea dolore. Raw denim mixtape drinking vinegar, Vice 3 wolf moon authentic officia aute id. Keffiyeh yr retro, salvia <a href = "http://www.casa.org/groups/aliqua"> aliqua (rollover) </a> leggings selvage narwhal farm-t-table dolor Tonx DIY photo booth. Bitters gastropub non 3 wolf moon Blue Bottle organic, cray aesthetic jean shorts velit umami. Mlkshk roof party cardigan, farm-to-table aute plaid wolf master cleanse. Thundercats tatooed lo-fi culpa, mollit Pinterest American Apparel. 3 wolf moon VHS hella, Tonx beard chambray sustainable jean shorts synth mlkshk fugiat excepteur banh mi eu whatever.</p>
           <p>Vinyl sartorial culpa bespoke labore, ethical readymade tofu selfies ut locavore commodo mumblecore paleo typewriter. Mumblecore selfies nostrud, asymmetrical 90's fanny pack est Blue Bottle ethic blog. Narwhal Shoreditch fixie tofu, nisi before
         </div>
         <ul class="socialcomments">
@@ -77,14 +77,20 @@
           </div>
         </div>
         <div class="sponsoredimage">
-          <img src="https://unsplash.it/280/300" alt="">
-          <span><a href="https://unsplash.it/280/300">About This Ad</a></span>
+          <img src="https://unsplash.it/280/300?image=469" alt="">
+          <span><a href="https://www.canoekayak.com/gear/">About This Ad</a></span>
         </div>
         <div class="sidebarhead">
           <h3>Sidebar Section Heading</h3>
           <div class="sidebarcontent">
             <p>Distillery ad sriracha, synth wolf street art brunch excepteur consectetur art party irony fugiat. Duis chia yr, pour-over Portlant velit High Life non aesthetic fugiat tattooed shabby <a href="https://soundcloud.com/widenski/dj-widenski-chic-disco-mixtape-2016">chic mixtape.</a></p>
           </div>
+          <br></br>
+          <br></br>
+          <br></br>
+          <br></br>
+          <br></br>
+
         </div>
       </div>
     </div>
